# Podcast2Insights

./: .gitignore  Makefile  README.md  TECHNICAL_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
app/: asr.py  audio_utils.py  chunker.py  config.py  diarizer.py  embedder.py  indexer.py  main.py  models.py  pipeline.py  qa.py  session_store.py  store.py
app/static/: index.html  main.js
tests/: test_api.py
