[project]
name = "podcast2insights"
version = "0.1.0"
description = "Bilingual podcast transcription demo (English + Chinese)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "python-multipart==0.0.20",
  "pydantic==2.10.5",
  "requests==2.32.3",
  "python-dotenv>=1.0.0",
  "yt-dlp==2025.3.31",
  "faster-whisper==1.1.1",
  "qwen-asr",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  # RAG pipeline — mlx-whisper is Apple Silicon only, skipped on Linux CI
  "mlx-whisper>=0.4.0; sys_platform == 'darwin'",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "openai>=1.30.0",
  "numpy>=1.26.0",
  # Speaker diarisation (requires HF_TOKEN — see app/diarizer.py)
  "pyannote.audio>=3.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
